2019-1/220/users/2882/executions/1872_1286.log
== TEST (2019-07-02 20:15:00) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array(eval(input("Entrada: ")))
frutas=array([[10,20,30],[50,40,10],[30,10,40]])

mat=mat.T
r=dot(inv(frutas),mat)

print("abacate:",round(r[0],1))
print("manga:",round(r[1],1))
print("pera:",round(r[2],1))

if(r[0]==min(r)):
	print("abacate")
elif(r[1]==min(r)):
	print("manga")
else:
	print("pera")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 20:16:03) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array(eval(input("Entrada: ")))
frutas=array([[10,50,30],[20,40,10],[30,10,40]])

mat=mat.T
r=dot(inv(frutas),mat)

print("abacate:",round(r[0],1))
print("manga:",round(r[1],1))
print("pera:",round(r[2],1))

if(r[0]==min(r)):
	print("abacate")
elif(r[1]==min(r)):
	print("manga")
else:
	print("pera")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 20:16:30) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array(eval(input("Entrada: ")))
frutas=array([[10,50,30],[20,40,10],[30,10,40]])

mat=mat.T
r=dot((frutas),mat)

print("abacate:",round(r[0],1))
print("manga:",round(r[1],1))
print("pera:",round(r[2],1))

if(r[0]==min(r)):
	print("abacate")
elif(r[1]==min(r)):
	print("manga")
else:
	print("pera")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 20:16:50) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array(eval(input("Entrada: ")))
frutas=array([[10,50,30],[20,40,10],[30,10,40]])

mat=mat.T
r=dot((frutas),mat)

print("abacate:",round(r[0],1))
print("manga:",round(r[1],1))
print("pera:",round(r[2],1))

if(r[0]==min(r)):
	print("abacate")
elif(r[1]==min(r)):
	print("manga")
else:
	print("pera")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 20:17:34) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array(eval(input("Entrada: ")))
frutas=array([[10,50,30],[20,40,10],[30,10,40]])

mat=mat.T
r=dot(mat,inv(frutas))

print("abacate:",round(r[0],1))
print("manga:",round(r[1],1))
print("pera:",round(r[2],1))

if(r[0]==min(r)):
	print("abacate")
elif(r[1]==min(r)):
	print("manga")
else:
	print("pera")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 20:17:53) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array(eval(input("Entrada: ")))
frutas=array([[10,50,30],[20,40,10],[30,10,40]])

mat=mat.T
r=dot(mat,inv(frutas))

print("abacate:",round(r[0],1))
print("manga:",round(r[1],1))
print("pera:",round(r[2],1))

if(r[0]==min(r)):
	print("abacate")
elif(r[1]==min(r)):
	print("manga")
else:
	print("pera")

-- EXECUTION TIME:
1.19768
-- TEST CASE 1:
---- input:
[2375,3375,3875]
---- correct output:
abacate: 50.0
manga: 8.0
pera: 58.0
manga
---- user output:
abacate: 50.0
manga: 7.5
pera: 57.5
manga
-- TEST CASE 2:
---- input:
[755,1415,765]
---- correct output:
abacate: 8.0
manga: 23.0
pera: 7.0
pera
---- user output:
abacate: 8.5
manga: 23.0
pera: 7.0
pera
-- TEST CASE 3:
---- input:
[3055,2995,3865]
---- correct output:
abacate: 19.0
manga: 32.0
pera: 74.0
abacate
---- user output:
abacate: 19.5
manga: 32.0
pera: 74.0
abacate
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 20:18:04) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array(eval(input("Entrada: ")))
frutas=array([[10,50,30],[20,40,10],[30,10,40]])

mat=mat.T
r=dot(mat,inv(frutas))

print("abacate:",round(r[0],0)
print("manga:",round(r[1],0)
print("pera:",round(r[2],0)

if(r[0]==min(r)):
	print("abacate")
elif(r[1]==min(r)):
	print("manga")
else:
	print("pera")

-- ERROR:
File "XXXX", line 11
    print("manga:",round(r[1],0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 20:18:55) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array(eval(input("Entrada: ")))
frutas=array([[10,50,30],[20,40,10],[30,10,40]])

mat=mat.T
r=dot(mat,inv(frutas))

print("abacate:",round(r[0],2)
print("manga:",round(r[1],2)
print("pera:",round(r[2],2)

if(r[0]==min(r)):
	print("abacate")
elif(r[1]==min(r)):
	print("manga")
else:
	print("pera")

-- ERROR:
File "XXXX", line 11
    print("manga:",round(r[1],2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 20:19:11) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array(eval(input("Entrada: ")))
frutas=array([[10,50,30],[20,40,10],[30,10,40]])

mat=mat.T
r=dot(mat,inv(frutas))

print("abacate:",round(r[0],2))
print("manga:",round(r[1],2))
print("pera:",round(r[2],2))

if(r[0]==min(r)):
	print("abacate")
elif(r[1]==min(r)):
	print("manga")
else:
	print("pera")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 20:20:29) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array(eval(input("Entrada: ")))
frutas=array([[10,50,30],[20,40,10],[30,10,40]])

mat=mat.T
r=dot(mat,inv(frutas))

print("abacate:",round(r[0],2))
print("manga:",round(r[1],2))
print("pera:",round(r[2],2))

if(r[0]==min(r)):
	print("abacate")
elif(r[1]==min(r)):
	print("manga")
else:
	print("pera")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 20:21:03) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array(eval(input("Entrada: ")))
frutas=array([[10,50,30],[20,40,10],[30,10,40]])

mat=mat.T
r=dot(mat,(frutas))

print("abacate:",round(r[0],2))
print("manga:",round(r[1],2))
print("pera:",round(r[2],2))

if(r[0]==min(r)):
	print("abacate")
elif(r[1]==min(r)):
	print("manga")
else:
	print("pera")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 20:21:22) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array(eval(input("Entrada: ")))
frutas=array([[10,50,30],[20,40,10],[30,10,40]])

mat=mat
r=dot(mat,inv(frutas))

print("abacate:",round(r[0],2))
print("manga:",round(r[1],2))
print("pera:",round(r[2],2))

if(r[0]==min(r)):
	print("abacate")
elif(r[1]==min(r)):
	print("manga")
else:
	print("pera")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 20:21:46) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array(eval(input("Entrada: ")))
frutas=array([[10,50,30],[20,40,10],[30,10,40]])

mat=mat
r=dot(mat,inv(frutas))

print("abacate:",round(r[0],2))
print("manga:",round(r[1],2))
print("pera:",round(r[2],2))

if(r[0]==min(r)):
	print("abacate")
elif(r[1]==min(r)):
	print("manga")
else:
	print("pera")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 20:22:11) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array(eval(input("Entrada: ")))
frutas=array([[10,50,30],[20,40,10],[30,10,40]])

mat=mat
r=dot(mat,inv(frutas))

print("abacate:",round(r[0],2))
print("manga:",round(r[1],2))
print("pera:",round(r[2],2))

if(r[0]==min(r)):
	print("abacate")
elif(r[1]==min(r)):
	print("manga")
else:
	print("pera")

-- EXECUTION TIME:
1.21695
-- TEST CASE 1:
---- input:
[2375,3375,3875]
---- correct output:
abacate: 50.0
manga: 8.0
pera: 58.0
manga
---- user output:
abacate: 50.0
manga: 7.5
pera: 57.5
manga
-- TEST CASE 2:
---- input:
[755,1415,765]
---- correct output:
abacate: 8.0
manga: 23.0
pera: 7.0
pera
---- user output:
abacate: 8.5
manga: 23.0
pera: 7.0
pera
-- TEST CASE 3:
---- input:
[3055,2995,3865]
---- correct output:
abacate: 19.0
manga: 32.0
pera: 74.0
abacate
---- user output:
abacate: 19.5
manga: 32.0
pera: 74.0
abacate
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 20:23:55) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array(eval(input("Entrada: ")))
frutas=array([[10,50,30],[20,40,10],[30,10,40]])

mat=mat
r=int(mat,inv(frutas))

print("abacate:",round(r[0],2))
print("manga:",round(r[1],2))
print("pera:",round(r[2],2))

if(r[0]==min(r)):
	print("abacate")
elif(r[1]==min(r)):
	print("manga")
else:
	print("pera")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 20:24:58) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array(eval(input("Entrada: ")))
frutas=array([[10,50,30],[20,40,10],[30,10,40]])

mat=mat
r=int(dot(inv(frutas),mat))

print("abacate:",round(r[0],2))
print("manga:",round(r[1],2))
print("pera:",round(r[2],2))

if(r[0]==min(r)):
	print("abacate")
elif(r[1]==min(r)):
	print("manga")
else:
	print("pera")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 20:25:29) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array(eval(input("Entrada: ")))
frutas=array([[10,50,30],[20,40,10],[30,10,40]])

mat=mat
r=(dot(inv(frutas),mat))

print("abacate:",round(r[0],2))
print("manga:",round(r[1],2))
print("pera:",round(r[2],2))

if(r[0]==min(r)):
	print("abacate")
elif(r[1]==min(r)):
	print("manga")
else:
	print("pera")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 20:26:10) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array(eval(input("Entrada: ")))
frutas=array([[10,50,30],[20,40,10],[30,10,40]])

mat=mat.T
r=(dot(inv(frutas),mat))

print("abacate:",round(r[0],2))
print("manga:",round(r[1],2))
print("pera:",round(r[2],2))

if(r[0]==min(r)):
	print("abacate")
elif(r[1]==min(r)):
	print("manga")
else:
	print("pera")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 20:26:25) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array(eval(input("Entrada: ")))
frutas=array([[10,50,30],[20,40,10],[30,10,40]])

mat=mat.T
r=(dot(inv(frutas),mat))

print("abacate:",round(r[0],2))
print("manga:",round(r[1],2))
print("pera:",round(r[2],2))

if(r[0]==min(r)):
	print("abacate")
elif(r[1]==min(r)):
	print("manga")
else:
	print("pera")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 20:26:57) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array(eval(input("Entrada: ")))
frutas=array([[10,50,30],[20,40,10],[30,10,40]])

mat=mat.T
r=solve(frutas,mat)

print("abacate:",round(r[0],2))
print("manga:",round(r[1],2))
print("pera:",round(r[2],2))

if(r[0]==min(r)):
	print("abacate")
elif(r[1]==min(r)):
	print("manga")
else:
	print("pera")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 20:27:46) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array(eval(input("Entrada: ")))
frutas=array([[10,50,30],[20,40,10],[30,10,40]])

mat=mat.T
r=solve(inv(frutas),mat)

print("abacate:",round(r[0],2))
print("manga:",round(r[1],2))
print("pera:",round(r[2],2))

if(r[0]==min(r)):
	print("abacate")
elif(r[1]==min(r)):
	print("manga")
else:
	print("pera")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 20:28:24) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array(eval(input("Entrada: ")))
frutas=array([[10,50,30],[20,40,10],[30,10,40]])

mat=mat.T
r=dot(inv(frutas),mat)

print("abacate:",round(r[0],2))
print("manga:",round(r[1],2))
print("pera:",round(r[2],2))

if(r[0]==min(r)):
	print("abacate")
elif(r[1]==min(r)):
	print("manga")
else:
	print("pera")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 20:29:17) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array(eval(input("Entrada: ")))
frutas=array([[10,20,30],[50,40,10],[30,10,40]])

mat=mat.T
r=dot(inv(frutas),mat)

print("abacate:",round(r[0],2))
print("manga:",round(r[1],2))
print("pera:",round(r[2],2))

if(r[0]==min(r)):
	print("abacate")
elif(r[1]==min(r)):
	print("manga")
else:
	print("pera")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 20:29:35) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array(eval(input("Entrada: ")))
frutas=array([[10,20,30],[50,40,10],[30,10,40]])

mat=mat.T
r=dot(inv(frutas),mat)

print("abacate:",round(r[0],2))
print("manga:",round(r[1],2))
print("pera:",round(r[2],2))

if(r[0]==min(r)):
	print("abacate")
elif(r[1]==min(r)):
	print("manga")
else:
	print("pera")

-- EXECUTION TIME:
1.02926
-- TEST CASE 1:
---- input:
[2375,3375,3875]
---- correct output:
abacate: 50.0
manga: 8.0
pera: 58.0
manga
---- user output:
abacate: 50.0
manga: 7.5
pera: 57.5
manga
-- TEST CASE 2:
---- input:
[755,1415,765]
---- correct output:
abacate: 8.0
manga: 23.0
pera: 7.0
pera
---- user output:
abacate: 8.5
manga: 23.0
pera: 7.0
pera
-- TEST CASE 3:
---- input:
[3055,2995,3865]
---- correct output:
abacate: 19.0
manga: 32.0
pera: 74.0
abacate
---- user output:
abacate: 50.0
manga: 7.5
pera: 57.5
manga
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 20:29:38) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array(eval(input("Entrada: ")))
frutas=array([[10,20,30],[50,40,10],[30,10,40]])

mat=mat.T
r=dot(inv(frutas),mat)

print("abacate:",round(r[0],2))
print("manga:",round(r[1],2))
print("pera:",round(r[2],2))

if(r[0]==min(r)):
	print("abacate")
elif(r[1]==min(r)):
	print("manga")
else:
	print("pera")

-- EXECUTION TIME:
1.68975
-- TEST CASE 1:
---- input:
[2375,3375,3875]
---- correct output:
abacate: 50.0
manga: 8.0
pera: 58.0
manga
---- user output:
abacate: 50.0
manga: 7.5
pera: 57.5
manga
-- TEST CASE 2:
---- input:
[755,1415,765]
---- correct output:
abacate: 8.0
manga: 23.0
pera: 7.0
pera
---- user output:
abacate: 8.5
manga: 23.0
pera: 7.0
pera
-- TEST CASE 3:
---- input:
[3055,2995,3865]
---- correct output:
abacate: 19.0
manga: 32.0
pera: 74.0
abacate
---- user output:
abacate: 19.5
manga: 32.0
pera: 74.0
abacate
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 20:29:43) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array(eval(input("Entrada: ")))
frutas=array([[10,20,30],[50,40,10],[30,10,40]])

mat=mat.T
r=dot(inv(frutas),mat)

print("abacate:",round(r[0],2))
print("manga:",round(r[1],2))
print("pera:",round(r[2],2))

if(r[0]==min(r)):
	print("abacate")
elif(r[1]==min(r)):
	print("manga")
else:
	print("pera")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 20:30:15) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array(eval(input("Entrada: ")))
frutas=array([[10,20,30],[50,40,10],[30,10,40]])

mat=mat.T
r=dot(inv(frutas),mat)

print("abacate:",round(r[0],0))
print("manga:",round(r[1],0))
print("pera:",round(r[2],0))

if(r[0]==min(r)):
	print("abacate")
elif(r[1]==min(r)):
	print("manga")
else:
	print("pera")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 20:30:38) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array(eval(input("Entrada: ")))
frutas=array([[10,20,30],[50,40,10],[30,10,40]])

mat=mat.T
r=dot(inv(frutas),mat)

print("abacate:",round(r[0],0))
print("manga:",round(r[1],0))
print("pera:",round(r[2],0))

if(r[0]==min(r)):
	print("abacate")
elif(r[1]==min(r)):
	print("manga")
else:
	print("pera")

-- EXECUTION TIME:
1.03598
-- TEST CASE 1:
---- input:
[2375,3375,3875]
---- correct output:
abacate: 50.0
manga: 8.0
pera: 58.0
manga
---- user output:
abacate: 50.0
manga: 8.0
pera: 58.0
manga
-- TEST CASE 2:
---- input:
[755,1415,765]
---- correct output:
abacate: 8.0
manga: 23.0
pera: 7.0
pera
---- user output:
abacate: 8.0
manga: 23.0
pera: 7.0
pera
-- TEST CASE 3:
---- input:
[3055,2995,3865]
---- correct output:
abacate: 19.0
manga: 32.0
pera: 74.0
abacate
---- user output:
abacate: 19.0
manga: 32.0
pera: 74.0
abacate
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
